--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <style>
         :root {
             --fuazuru-green: #1e6b23;
-            --fuazuru-light: #f0f9f1;
         }
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -18,7 +17,7 @@
             background-color: #f9f9f9;
         }
         
-        /* IMPROVED HEADER STYLES */
+        /* CLEAN HEADER STYLES */
         .header {
             text-align: center;
             padding: 25px 20px;
@@ -26,27 +25,20 @@
             color: white;
             border-radius: 8px;
             margin-bottom: 30px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.15);
         }
         .header h1 {
             font-size: 1.8rem;
             margin: 0 0 5px 0;
-            letter-spacing: 0.5px;
+            font-weight: 600;
         }
         .header h2 {
             font-weight: 700; /* Bold */
             font-size: 1.6rem;
             margin: 15px 0;
-            text-shadow: 0 1px 2px rgba(0,0,0,0.2);
-            background: rgba(255,255,255,0.15);
-            padding: 10px;
-            border-radius: 4px;
-            display: inline-block;
         }
         .header p {
             font-size: 1.1rem;
             margin-top: 5px;
-            opacity: 0.9;
         }
         
         .section {
@@ -54,7 +46,6 @@
             padding: 25px;
             border-radius: 8px;
             margin-bottom: 25px;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.05);
             border: 1px solid #e0e0e0;
         }
         h2 {
@@ -109,7 +100,6 @@
             color: #777;
             font-size: 0.9rem;
             padding: 15px;
-            border-top: 1px solid #eee;
         }
         @media (max-width: 600px) {
             body {
@@ -123,7 +113,6 @@
             }
             .header h2 {
                 font-size: 1.3rem;
-                padding: 8px;
             }
             .section {
                 padding: 15px;
@@ -132,7 +121,7 @@
     </style>
 </head>
 <body>
-    <!-- IMPROVED HEADER SECTION -->
+    <!-- CLEAN HEADER SECTION -->
     <div class="header">
         <h1>Federal University of Agriculture Zuru</h1>
         <h2>NRF 2025 Grant Application Support Form</h2>
@@ -237,7 +226,7 @@
 
     <div class="footer">
         <p>Research Development Office • Federal University of Agriculture Zuru</p>
-        <p>Contact: grants@fuazuru.edu.ng</p>
+        <p>Contact: vc@fuaz.edu.ng</p>
     </div>
 </body>
 </html>
