--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             background-color: #f9f9f9;
         }
         
-        /* CLEAN HEADER STYLES */
+        /* UNIFIED HEADER STYLES */
         .header {
             text-align: center;
             padding: 25px 20px;
@@ -28,13 +28,14 @@
         }
         .header h1 {
             font-size: 1.8rem;
-            margin: 0 0 5px 0;
+            margin: 0;
             font-weight: 600;
         }
-        .header h2 {
-            font-weight: 700; /* Bold */
-            font-size: 1.6rem;
-            margin: 15px 0;
+        .header .form-title {
+            font-size: 1.8rem; /* Same size as university name */
+            font-weight: 600; /* Same weight as university name */
+            margin: 10px 0; /* Adjusted spacing */
+            padding: 0;
         }
         .header p {
             font-size: 1.1rem;
@@ -108,11 +109,9 @@
             .header {
                 padding: 20px 15px;
             }
-            .header h1 {
+            .header h1,
+            .header .form-title {
                 font-size: 1.5rem;
-            }
-            .header h2 {
-                font-size: 1.3rem;
             }
             .section {
                 padding: 15px;
@@ -121,10 +120,10 @@
     </style>
 </head>
 <body>
-    <!-- CLEAN HEADER SECTION -->
+    <!-- UNIFIED HEADER SECTION -->
     <div class="header">
         <h1>Federal University of Agriculture Zuru</h1>
-        <h2>NRF 2025 Grant Application Support Form</h2>
+        <div class="form-title">NRF 2025 Grant Application Support Form</div>
         <p>Deadline: <strong>20 August 2025</strong></p>
     </div>
 
@@ -226,7 +225,7 @@
 
     <div class="footer">
         <p>Research Development Office • Federal University of Agriculture Zuru</p>
-        <p>Contact: vc@fuaz.edu.ng</p>
+        <p>Contact: grants@fuazuru.edu.ng</p>
     </div>
 </body>
 </html>
