--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
     <div class="footer">
         <p>Research Development Office • Federal University of Agriculture Zuru</p>
-        <p>Contact: grants@fuazuru.edu.ng</p>
+        <p>Contact: vc@fuaz.edu.ng</p>
     </div>
 </body>
 </html>
